projects/04-gitops-multi-env/BillFlow/k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: billflow
  namespace: billflow
spec:
  selector:
    app: billflow
  ports:
    - port: 80
      targetPort: 3000
  type: ClusterIP
