projects/04-gitops-multi-env/BillFlow/k8s/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: billflow
  namespace: billflow
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: billflow.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: billflow
                port:
                  number: 80
